tests/invalid_options_file/unterminated_string.options_file
# Unterminated string.
MCFLAGS-global = --dump-hlds-pred-name="abc
